[gd_scene load_steps=4 format=3 uid="uid://c5mpieqxqscg1"]

[ext_resource type="Script" path="res://palette_slot.gd" id="1_nlael"]
[ext_resource type="Shader" path="res://palette_slot.gdshader" id="2_fh47d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ebthm"]
resource_local_to_scene = true
shader = ExtResource("2_fh47d")
shader_parameter/line_thickness = 0.1
shader_parameter/line_color = null
shader_parameter/color_factor = null
shader_parameter/none = true
shader_parameter/none_margin = 0.2

[node name="palette_slot" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlael")

[node name="color" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ebthm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[connection signal="mouse_entered" from="color/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="color/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="color/Button" to="." method="_on_button_pressed"]
